# cv-starter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
results/metrics/: class_report.json  summary.json
src/cv_starter/: __init__.py  data.py  eval.py  model.py  train.py  utils.py
tests/: test_sanity.py
