[project]
name = "cv-starter"
version = "0.1.0"
requires-python = ">=3.8,<3.11"
dependencies = [
  "tensorflow==2.10.1",
  "medmnist==2.2.2",
  "numpy==1.23.5",
  "scikit-learn==1.3.2",
  "matplotlib==3.9.4",
  "pyyaml==6.0.2",
  "pytest==7.4.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []